# simple_cpp

./: .gitignore  CMakeLists.txt  README.md
arr2d/: CMakeLists.txt  main.cpp
block_alloc/: CMakeLists.txt  alloc.h  main.cpp
countwords/: CMakeLists.txt  main.cpp
enumarray/: CMakeLists.txt  main.cpp
ipv4/: CMakeLists.txt  main.cpp
mtest/: log_duration.h  tests.h
stackvector/: CMakeLists.txt  main.cpp
stltrick/: CMakeLists.txt  main.cpp
task/: CMakeLists.txt  main.cpp  task.h
